--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRvZOa-oOOuIb99KHq7bqG2U9f1mpi2m0&libraries=places"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
